--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "Younup/greenmorrow-action-release",
-	"version": "0.0.8",
+	"name": "@younup/greenmorrow-action-release",
+	"version": "0.0.9",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Younup/greenmorrow-action-release.git"
