--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,7 @@ runs:
       with:
         registry-url: 'https://npm.pkg.github.com'
         node-version: '16'
+        scope: '@younup'
     - name: git authentication
       shell: bash
       run: |
@@ -69,7 +70,7 @@ runs:
       shell: bash
       run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ inputs.GH_PAT }}
+        NODE_AUTH_TOKEN: ${{ inputs.gh_pat }}
     - name: webhook
       if: ${{ inputs.webhook_url != 'none' }}
       uses: zzzze/webhook-trigger@master
