--- a/action.yml
+++ b/action.yml
@@ -48,7 +48,7 @@ runs:
         node-version: '16'
         uses: jgierer12/npm-auth-gpr@v1
         with:
-          token: ${{ inputs.secret_input }}
+          token: ${{ inputs.gh_pat }}
     - name: git authentication
       shell: bash
       run: |
