--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ inputs:
     description: "full accesss auth token"
     required: false
   release_as:
-    description: 'bump type, patch, minor, major'
+    description: 'bump type, patch, minor, major on current branch'
     required: true
     default: 'patch'
   push_to:
@@ -73,15 +73,12 @@ runs:
       if: ${{ inputs.publish_type == 'library' }}
       shell: bash
       run: npm publish
-      # env:
-      #   NODE_AUTH_TOKEN: ${{ inputs.gh_pat }}
     - name: webhook
       if: ${{ inputs.webhook_url != 'none' }}
       uses: zzzze/webhook-trigger@master
       with:
         webhook_url: ${{ inputs.webhook_url }}
         options: "-H \"Accept: application/vnd.github.everest-preview+json\" -H \"Authorization: token ${{ inputs.gh_pat }}\""
-
     - name: push to branch chosen
       if: ${{ inputs.push_to != 'none' }}
       uses: ad-m/github-push-action@master
