--- a/action.yml
+++ b/action.yml
@@ -50,7 +50,7 @@ runs:
       shell: bash
       run: | 
         git push --follow-tags
-        echo ::set-output name=tag_name::$(git describe HEAD --abbrev=0)
+        echo tag_name=$(git describe HEAD --abbrev=0) >> $GITHUB_OUTPUT
     - name: create release
       uses: actions/create-release@v1
       env:
@@ -59,9 +59,9 @@ runs:
         release_name: Release ${{ steps.publish_tag.outputs.tag_name}}
         tag_name: ${{ steps.publish_tag.outputs.tag_name }}
         body_path: RELEASE_BODY.md
-    # if should_build = true, install nodejs, dependancies then build the app.
+    # if should_build = true or publish_type === 'library', install nodejs, project dependancies then build the app.
     - name: setup node
-      if: ${{ inputs.should_build == 'true' }}
+      if: ${{ inputs.should_build == 'true' || inputs.publish_type == 'library' }}
       uses: actions/setup-node@v3
       with:
         registry-url: "https://npm.pkg.github.com"
